<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.act</groupId>
	<artifactId>RSCAT</artifactId>
	<version>1.0.2</version>
	<developers>
		<developer>
			<id>jiangb</id>
			<name>Bingnan Jiang</name>
			<email>bnjiangece@gmail.com</email>
			<organization>ACT, Inc.</organization>
			<organizationUrl>http://www.act.org/</organizationUrl>
			<roles>
				<role>architect</role>
				<role>developer</role>
				<role>tester</role>
			</roles>
			<timezone>America/Denver</timezone>
		</developer>
	</developers>
	<repositories>
		<repository>
			<id>Local Repository</id>
			<url>file:///${project.basedir}/repo</url>
		</repository>
	</repositories>
	<properties>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
		<dependency.locations.enabled>false</dependency.locations.enabled>
	</properties>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
				<version>3.0.0</version>
				<configuration>
					<configLocation>${basedir}/checkstyle.xml</configLocation>
					<encoding>UTF-8</encoding>
					<consoleOutput>true</consoleOutput>
					<failsOnError>true</failsOnError>
					<failsOnViolation>true</failsOnViolation>
					<violationSeverity>error</violationSeverity>
					<linkXRef>false</linkXRef>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.11</version>
		</dependency>
		<dependency>
			<groupId>com.dashoptimization</groupId>
			<artifactId>xprm</artifactId>
			<version>5.0.0</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<version>1.7.21</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-math3</artifactId>
			<version>3.6.1</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.6</version>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.2</version>
		</dependency>
		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>19.0</version>
		</dependency>
	</dependencies>

</project>